--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   provider: ^6.1.5+1
   get: ^4.7.2
   stylish_bottom_bar: ^1.1.1
+  http: ^1.5.0
+  get_storage: ^2.1.1
+  flutter_hooks: ^0.21.3+1
 
 dev_dependencies:
   flutter_test:
